--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,7 +29,8 @@ framework:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
     fragments:       ~
-    http_method_override: true
+    http_method_override:
+    translator: ~
 
 # Twig Configuration
 twig:
@@ -78,3 +79,28 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+fos_rest:
+    routing_loader:
+        default_format: json
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: Pheetup\UserBundle\Entity\Member
+    registration: ~
+    service: ~
+    resetting: ~
+hwi_oauth:
+    connect:
+        account_connector: pheetup.user_provider
+    firewall_name: main
+    resource_owners:
+        github:
+            name: github
+            type: github
+            client_id: "%github.client_id%"
+            client_secret: "%github.client_secret%"
+            scope: "user:email,public_repo"
+    fosub:
+        username_iterations: 30
+        properties:
+            github: github_id
