--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,4 +31,5 @@ security:
 
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_ADMIN}
         - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
