--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -19,5 +19,5 @@ parameters:
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
 
-    github.client_id:
-    github.client_secret:
+    github.client_id: ~
+    github.client_secret: ~
