--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,3 +14,17 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+doctrine:
+    dbal:
+        default_connection: default
+
+        connections:
+            default:
+                driver:  pdo_sqlite
+                user:    test
+                path:    %kernel.root_dir%/sqlite.db.cache
+                #memory: true
+                charset: utf8
+    orm:
+        entity_managers:
+            default: ~
