--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: php
 php:
   - 5.6
-  - 7
-addons:
-  postgresql: "9.3"
+  - 7 
 services:
   - postgresql
 script: phpunit -c app/
@@ -11,10 +9,10 @@ env:
   - SYMFONY_VERSION=2.8.*
 notifications:
   email:
-    - ankaraphp@googlegroups.com
+    - ankaraphp06@gmail.com
 before_script:
   - sudo apt-get update > /dev/null
   - sudo apt-get install language-pack-tr
-  - psql -c 'create database pheetup;' -U postgres
   - cp app/config/parameters.yml.dist app/config/parameters.yml
   - composer install
+  - php app/console doctrine:schema:update --force --env=test
