Configuration tests for heroku

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -12,16 +12,18 @@ imports:
 #        metadata_cache_driver: apc
 #        result_cache_driver: apc
 #        query_cache_driver: apc
-
+doctrine:
+    dbal:
+        database_url: %database_url%
 monolog:
     handlers:
         main:
             type:         fingers_crossed
-            action_level: error
+            action_level: %monolog_action_level%
             handler:      nested
         nested:
             type:  stream
-            path:  "%kernel.logs_dir%/%kernel.environment%.log"
+            path:  "php://stderr"
             level: debug
         console:
             type:  console
