--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,10 @@
     "phpunit/phpunit": "5.0.*"
   },
   "scripts": {
+    "warmup": [
+      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache"
+    ],
     "post-install-cmd": [
       "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
@@ -60,7 +64,11 @@
     "symfony-web-dir": "web",
     "symfony-assets-install": "relative",
     "incenteev-parameters": {
-      "file": "app/config/parameters.yml"
+      "file": "app/config/parameters.yml",
+      "env-map": {
+        "database_url": "DATABASE_URL",
+        "monolog_action_level": "LOG_LEVEL"
+      }
     },
     "branch-alias": {
       "dev-master": "2.7-dev"
