--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     }
   },
   "require": {
+    "ext-mbstring": "*",
     "php": ">=5.3.9",
     "symfony/symfony": "2.7.*",
     "doctrine/orm": "^2.4.8",
