--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -19,6 +19,9 @@ hwi_oauth_login:
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
     prefix: /
+fos_user_group:
+    resource: "@FOSUserBundle/Resources/config/routing/group.xml"
+    prefix: /community
 
 github_login:
     path: /login/check-github
