--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "friendsofsymfony/user-bundle": "~2.0@dev",
     "hwi/oauth-bundle": ">=0.4",
     "mopa/bootstrap-bundle": "dev-master",
-    "twbs/bootstrap": "dev-master"
+    "twbs/bootstrap": "dev-master",
+    "stof/doctrine-extensions-bundle": "^1.2"
   },
   "require-dev": {
     "doctrine/data-fixtures": "dev-master",
