--- a/app/config/assets.yml
+++ b/app/config/assets.yml
@@ -19,7 +19,7 @@ assetic:
       filter: 'cssrewrite'
     admin_js:
       inputs:
-        - '@PheetupAdminBundle/Resources/public/js/jquery.js'
+        - '@PheetupAdminBundle/Resources/public/js/jquery.min.js'
         - '@MopaBootstrapBundle/Resources/public/bootstrap/js/tooltip.js'
         - '@MopaBootstrapBundle/Resources/public/bootstrap/js/*.js'
         - '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-collection.js'
